fix for shade border overflow

--- a/app/views/css/main.sass
+++ b/app/views/css/main.sass
@@ -374,9 +374,10 @@ li .label
 
 .expando_pic
   z-index: 2
+  display: table
+  max-width: inherit
   @include box-shadow(inset 0px 0px 30px rgba(0,0,20,1))
   img
-    max-width: 100%
     position: relative
     z-index: -1
 
